chore: rerun open rewrite to migrate jackson to 3